--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,6 @@ panic-probe = { version = "0.3.1", features = ["print-defmt"] }
 nrf52833-pac = "0.12.2"
 defmt = "0.3.8"
 nrf52833-hal = "0.18.0"
+
+[profile.release]
+debug = 2
